BZR-137 Эндпоинт PUT /chats/{chatId}/messages/{messageId}/reactions/{reactionId} и новое событие в WS
