# src/main/java/org/bazar/chat/adapter/inbound/rest/message/MessageController.java
@@ -8,9 +8,12 @@ import org.bazar.chat.app.api.message.EditMessageContentInbound;
 import org.bazar.chat.app.api.message.GetChatMessagesInbound;
 import org.bazar.chat.app.api.message.dto.CreateMessageDto;
 import org.bazar.chat.app.api.message.dto.GetMessagePageDto;
+import org.bazar.chat.app.api.reaction.UpdateMessageReactionInbound;
+import org.bazar.chat.app.api.reaction.dto.UpdateReactionDto;
 import org.bazar.chat.model.CreateMessageRequest;
 import org.bazar.chat.model.DeleteMessageRequest;
 import org.bazar.chat.model.MessagePageResponse;
+import org.bazar.chat.model.ReactionUpdateResponse;
 import org.bazar.chat.model.UpdateChatMessageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.web.PageableDefault;
@@ -25,6 +28,7 @@ public class MessageController implements MessagesApi {
     private final CreateMessageInbound createMessageInbound;
     private final DeleteMessagesInbound deleteMessagesInbound;
     private final EditMessageContentInbound editMessageContentInbound;
+    private final UpdateMessageReactionInbound updateMessageReactionInbound;
 
     @Override
     public ResponseEntity<Void> createMessage(Long chatId, CreateMessageRequest createMessageRequest) {
@@ -49,5 +53,11 @@ public class MessageController implements MessagesApi {
     public ResponseEntity<Void> updateChatMessage(String chatId, String messageId, UpdateChatMessageRequest updateChatMessageRequest) {
         editMessageContentInbound.execute(restMessageMapper.toUpdateMessageDto(chatId, messageId, updateChatMessageRequest.getNewContent()));
         return ResponseEntity.ok().build();
+    }
+
+    @Override
+    public ResponseEntity<ReactionUpdateResponse> updateMessageReaction(Long chatId, Long messageId, Long reactionId) {
+        UpdateReactionDto result = updateMessageReactionInbound.execute(chatId, messageId, reactionId);
+        return ResponseEntity.ok().body(new ReactionUpdateResponse(result.messageId(), result.reactionId(), result.count()));
     }
 }
